Fix content overflow on mobile

--- a/styles.css
+++ b/styles.css
@@ -355,8 +355,19 @@ h2 span {
 .play > div > div:nth-of-type(2) a:visited {
   color: white;
 }
-/* -- Adjustments for mobile -- */
+/* -- Adjustments for smaller screens -- */
 
+@media (max-width: 430px) {
+  html {
+    font-size: 12px;
+  }
+
+  .hero-image img:last-child {
+    width: 9rem;
+    right: -1.5rem;
+    top: 5rem;
+  }
+}
 @media (max-width: 985px) {
   .container {
     max-width: 30.625rem;
